--- a/app/src/main/res/layout/fragment_shop_cart.xml
+++ b/app/src/main/res/layout/fragment_shop_cart.xml
@@ -10,6 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="@string/hello_blank_fragment"
+        android:textColor="#000000"
         android:visibility="visible" />
 
 </FrameLayout>
