--- a/app/src/main/res/layout/fragment_shop_cart.xml
+++ b/app/src/main/res/layout/fragment_shop_cart.xml
@@ -7,7 +7,6 @@
 
     >
 
-
     <TextView
         android:layout_width="match_parent"
         android:layout_height="40dp"
@@ -19,7 +18,7 @@
 
 
     <ListView
-        android:id="@+id/lv_shopping_cart_activity"
+        android:id="@+id/shopcart_listview"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
@@ -42,15 +41,14 @@
         android:layout_marginTop="10dp">
 
         <CheckBox
-            android:id="@+id/cb_activity_shopping_cart"
+            android:id="@+id/shopcart_item_checkbox"
             android:layout_margin="7dp"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:button="@null"
             android:checked="false"
+            android:background="@drawable/check_box_back"
             />
-            <!--android:background="@drawable/check_box_background"-->
-            <!--/>-->
 
         <TextView
             android:layout_width="wrap_content"
@@ -58,21 +56,21 @@
             android:layout_marginLeft="7dp"
             android:layout_marginStart="7dp"
             android:text="全选"
-            android:textColor="#3e3a39"
+            android:textColor="@color/darkgray"
             />
 
 
         <TextView
-            android:id="@+id/tv_activity_shopping_cart_total"
+            android:id="@+id/fragment_shopcart_total_price"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="match_parent"
             android:text="合计:￥0"
-            android:gravity="right|center_vertical"
+            android:gravity="end|center_vertical"
             android:padding="7dp"
             android:layout_marginEnd="10dp"
             android:layout_marginRight="10dp"
-            android:textColor="#3e3a39"/>
+            android:textColor="@color/darkgray"/>
 
     </LinearLayout>
 
@@ -81,18 +79,11 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_height="30dp"
         android:layout_weight="1"
         android:visibility="gone">
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:text="清空购物车"
-            android:textColor="#ffffffff"
-            android:id="@+id/btn_delete_all_product"
-            android:layout_gravity="end"
-            android:layout_weight="0.10" />
+
 
     </LinearLayout>
 
@@ -111,24 +102,36 @@
         <Button
             android:layout_width="match_parent"
             android:layout_height="30dp"
-            android:text="去结算()"
-            android:textColor="#ea5404"
-            android:background="#eeefef"
+            android:text="结算()"
+            android:textColor="@color/Naranja"
+            android:background="@color/lightGray"
             android:layout_marginTop="10dp"
+            android:id="@+id/fragment_shopcart_btn_goto_payment"
             style="?android:attr/borderlessButtonStyle"
-            android:id="@+id/btn_activity_shopping_cart_clearing"/>
+            />
 
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="30dp"
             android:text="删除所选商品"
-            android:textColor="#ea5404"
-            android:background="#eeefef"
+            android:textColor="@color/Naranja"
+            android:background="@color/lightGray"
             android:layout_marginTop="10dp"
             style="?android:attr/borderlessButtonStyle"
-            android:id="@+id/btn_delete_selected_product"/>
+            android:id="@+id/fragment_shopcart_btn_delete_checked_product"/>
 
-    </LinearLayout>
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:layout_marginTop="10dp"
+            android:text="清空购物车"
+            android:textColor="@color/Naranja"
+            android:background="@color/lightGray"
+            android:id="@+id/fragment_shopcart_btn_delete_all_product"
+            android:layout_gravity="end"
+            android:layout_weight="0.10"/>
+
+   </LinearLayout>
 
 </LinearLayout>
