--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
     <color name="Naranja">#ea5404</color>
+    <color name="darkgray">#333130</color>
+    <color name="lightGray">#eeefef</color>
 </resources>
