--- a/app/src/main/res/layout/activity_confirm_order.xml
+++ b/app/src/main/res/layout/activity_confirm_order.xml
@@ -29,7 +29,7 @@
 
         <TextView
             android:id="@+id/activity_confirm_receiver_name"
-            android:layout_width="wrap_content"
+            android:layout_width="75dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="5dp"
             android:text="姓名："
@@ -41,7 +41,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toEndOf="@id/activity_confirm_receiver_name"
-            android:layout_marginStart="12dp"
+            android:layout_marginStart="0dp"
             android:text=""
             android:layout_marginBottom="5dp"
             android:textSize="14sp"
@@ -52,18 +52,19 @@
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_toEndOf="@id/activity_confirm_receiver_name"
-            android:layout_marginStart="12dp"
+            android:layout_marginStart="0dp"
             android:text=""
             android:layout_marginBottom="5dp"
             android:background="@drawable/edittext_bg"
             android:inputType="text"
+            android:hint="请输入姓名"
             android:textSize="14sp"
             android:textColor="@color/edittextGray"
             android:visibility="gone"/>
 
         <TextView
             android:id="@+id/activity_confirm_receiver_address"
-            android:layout_width="wrap_content"
+            android:layout_width="75dp"
             android:layout_height="wrap_content"
             android:layout_below="@id/activity_confirm_receiver_name"
             android:text="发货地址："
@@ -77,7 +78,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/activity_confirm_receiver_name"
             android:layout_toEndOf="@id/activity_confirm_receiver_address"
-            android:layout_marginStart="26dp"
+            android:layout_marginStart="0dp"
             android:layout_marginBottom="5dp"
             android:text=""
             android:textSize="14sp"
@@ -89,18 +90,19 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/activity_confirm_receiver_name"
             android:layout_toEndOf="@id/activity_confirm_receiver_address"
-            android:layout_marginStart="26dp"
+            android:layout_marginStart="0dp"
             android:layout_marginBottom="5dp"
             android:background="@drawable/edittext_bg"
             android:inputType="number"
             android:text=""
             android:textSize="14sp"
             android:textColor="#595757"
+            android:hint="请输入收货地址"
             android:visibility="gone"/>
 
         <TextView
             android:id="@+id/activity_confirm_receiver_phone"
-            android:layout_width="wrap_content"
+            android:layout_width="75dp"
             android:layout_height="wrap_content"
             android:layout_below="@id/activity_confirm_receiver_address"
             android:text="联系电话："
@@ -114,7 +116,7 @@
             android:layout_height="wrap_content"
             android:layout_toEndOf="@id/activity_confirm_receiver_phone"
             android:layout_below="@id/activity_confirm_receiver_address"
-            android:layout_marginStart="-2dp"
+            android:layout_marginStart="0dp"
             android:layout_marginBottom="5dp"
             android:text=""
             android:textSize="14sp"
@@ -126,9 +128,10 @@
             android:layout_height="wrap_content"
             android:layout_toEndOf="@id/activity_confirm_receiver_phone"
             android:layout_below="@id/activity_confirm_receiver_address"
-            android:layout_marginStart="-2dp"
+            android:layout_marginStart="0dp"
             android:layout_marginBottom="5dp"
             android:background="@drawable/edittext_bg"
+            android:hint="请输入联系电话"
             android:inputType="phone"
             android:text=""
             android:textSize="14sp"
@@ -208,8 +211,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:text="共0件商品"
-        android:textSize="14sp"
+        android:text="共0种商品"
+        android:textSize="16sp"
         android:textColor="#595757"/>
 
     <TextView
@@ -219,20 +222,22 @@
         android:layout_above="@id/activity_confirm_order_button"
         android:layout_centerHorizontal="true"
         android:text="合计：￥0"
-        android:textSize="14sp"
-        android:textColor="#595757"/>
+        android:textSize="16sp"
+        android:textColor="@color/Naranja"/>
 
     <Button
         android:id="@+id/activity_confirm_order_button"
-        android:layout_width="320dp"
-        android:layout_height="30dp"
-        android:text="确认付款"
-        android:gravity="center"
-        android:textSize="16sp"
-        android:textColor="@color/Naranja"
-        android:background="@color/lightGray"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_margin="20dp"/>
+        android:layout_centerHorizontal="true"
+        android:layout_gravity="center_vertical"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="20dp"
+        android:background="@color/lightGray"
+        android:text="确认付款"
+        android:textColor="@color/Naranja"
+        android:textSize="16sp" />
 
     <View
         android:id="@+id/activity_confirm_line2"
