--- a/app/src/main/res/layout/fragment_view_order.xml
+++ b/app/src/main/res/layout/fragment_view_order.xml
@@ -30,6 +30,7 @@
         android:id="@+id/fragment_view_order_line2"
         android:layout_below="@+id/fragment_view_order_line"
         android:layout_width="match_parent"
+        android:layout_marginTop="1dp"
         android:layout_height="1dp"
         android:background="@color/white"/>
 
