--- a/app/src/main/res/layout/mainactivity_app_bar_main.xml
+++ b/app/src/main/res/layout/mainactivity_app_bar_main.xml
@@ -11,23 +11,23 @@
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+        <!--<android.support.v7.widget.Toolbar-->
+            <!--android:id="@+id/toolbar"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="?attr/actionBarSize"-->
+            <!--android:background="?attr/colorPrimary"-->
+            <!--app:popupTheme="@style/AppTheme.PopupOverlay" />-->
 
     </android.support.design.widget.AppBarLayout>
 
     <include layout="@layout/mainactivity_content_main" />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/floating_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="top|end"
-        android:layout_margin="20dp"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+        android:layout_gravity="top|start"
+        android:layout_margin="10dp"
+        app:srcCompat="@android:drawable/ic_dialog_dialer" />
 
 </android.support.design.widget.CoordinatorLayout>
