--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -1,94 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/admin_drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/lightGray"
-    android:orientation="vertical"
-    tools:context="com.example.star.movie4share.activity.AdminActivity">
+    tools:openDrawer="start">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="20dp"
-            >
-
-            <ImageButton
-                android:id="@+id/admin_add_user_imageBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@color/lightGray"
-                app:srcCompat="@drawable/admin_add_user" />
-
-            <ImageButton
-                android:id="@+id/admin_delete_user_imageBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="40dp"
-                android:background="@color/lightGray"
-                app:srcCompat="@drawable/admin_delete_user" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:orientation="horizontal"
-            android:layout_marginTop="5dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@color/lightGray"
-                android:textColor="@color/darkgray"
-                android:text="添加用户"
-                />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="115dp"
-                android:background="@color/lightGray"
-                android:textColor="@color/darkgray"
-                android:text="删除用户"
-                />
-
-        </LinearLayout>
-
-        <View
-            android:id="@+id/activity_confirm_line"
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:layout_marginTop="5dp"
-            android:background="@color/lightGray"/>
-        <View
-            android:id="@+id/activity_confirm_line2"
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:background="@color/lightGray"/>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:text="（单击以显示密码，长按以编辑用户）"
-            android:textColor="@color/darkgray"
-            >
-        </TextView>
-
-        <ListView
-            android:id="@+id/admin_listview"
-            android:layout_marginTop="5dp"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            >
-        </ListView>
+    <include
+        layout="@layout/activity_admin_floating_btn"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 
-</LinearLayout>
+    <android.support.design.widget.NavigationView
+        android:id="@+id/admin_nav_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        app:headerLayout="@layout/adminactivity_nav_header"
+        app:menu="@menu/activity_admin_drawer" />
+
+</android.support.v4.widget.DrawerLayout>
