--- a/app/src/main/res/layout/activity_detail_product.xml
+++ b/app/src/main/res/layout/activity_detail_product.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/white"
+
     >
 
     <ScrollView
@@ -12,7 +13,8 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:id="@+id/parentlayout">
 
             <RelativeLayout
                 android:id="@+id/main_picture"
@@ -24,7 +26,6 @@
                     android:id="@+id/img_activity_product"
                     android:layout_width="70dp"
                     android:layout_height="70dp"
-                    android:layout_marginLeft="20dp"
                     android:layout_marginStart="20dp"
                     android:layout_centerVertical="true"
                     android:scaleType="fitXY"
@@ -32,7 +33,6 @@
                 <View
                     android:layout_width="98dp"
                     android:layout_height="98dp"
-                    android:layout_marginLeft="6dp"
                     android:layout_marginStart="6dp"
                     android:layout_centerVertical="true"
                     android:background="@drawable/product_circle"
@@ -45,7 +45,6 @@
             <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_toRightOf="@id/main_picture"
                 android:layout_toEndOf="@id/main_picture">
 
                 <RelativeLayout
@@ -86,7 +85,6 @@
             <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
                 android:layout_marginTop="25dp"
                 android:layout_marginEnd="25dp">
@@ -118,7 +116,6 @@
                 android:id="@+id/detail_product_name"
                 android:textSize="16sp"
                 android:layout_marginTop="10dp"
-                android:layout_marginLeft="25dp"
                 android:layout_marginStart="25dp"
                 />
 
@@ -130,14 +127,24 @@
                 android:background="#eeefef"
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="15dp"/>
+
             <WebView
                 android:id="@+id/activity_product_details_more_details"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_below="@id/product_detail_line"
-
-                android:ellipsize="end"
+                android:layout_alignParentBottom="true"
+                android:layout_below="@+id/product_detail_line"
+                android:focusable="false"
                 android:padding="7dp"
+                />
+
+            <ImageView
+                android:id="@+id/activity_product_details_loading"
+                android:src="@drawable/web_loading_small"
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:layout_below="@+id/product_detail_line"
+                android:layout_gravity="top|center_horizontal"
                 />
         </RelativeLayout>
     </ScrollView>
