--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,8 @@
     <color name="lightGray">#eeefef</color>
     <color name="edittextGray">#595757</color>
     <color name="midGray">#6f6f6f</color>
+
+    <color name="pink">#cf0685</color>
+    <color name="midpink">#d251a5</color>
+    <color name="lightpink">#d894c4</color>
 </resources>
