--- a/app/src/main/res/layout/fragment_home_page.xml
+++ b/app/src/main/res/layout/fragment_home_page.xml
@@ -1,17 +1,49 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     tools:context="com.example.star.movie4share.fragment.HomePage">
 
+    <LinearLayout
+        android:id="@+id/search_bar_layout"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:orientation="horizontal"
+        android:background="@drawable/side_nav_bar_opposite">
+
+        <include
+            android:layout_width="50dp"
+            android:layout_height="60dp"
+            android:layout_marginTop="12dp"
+            layout="@layout/search_qr_code_with_word"/>
+
+        <SearchView
+            android:id="@+id/search_bar"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_marginTop="5dp"
+            >
+        </SearchView>
+
+    </LinearLayout>
 
     <ImageView
         android:id="@+id/imageView2"
+        android:layout_marginTop="20dp"
+        android:layout_below="@+id/search_bar_layout"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="200dp"
         android:src="@drawable/steve_jobs"
         android:layout_gravity="center"/>
 
+    <ListView
+        android:id="@+id/search_listview"
+        android:layout_marginTop="15dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:transcriptMode="normal"
+        android:layout_below="@id/imageView2"/>
 
-</FrameLayout>
+</RelativeLayout>
