--- a/app/src/main/res/layout/mainactivity_app_bar_main.xml
+++ b/app/src/main/res/layout/mainactivity_app_bar_main.xml
@@ -27,6 +27,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="top|start"
+        android:visibility="gone"
         android:layout_margin="10dp"
         app:srcCompat="@android:drawable/ic_dialog_dialer" />
 
