--- a/app/src/main/res/layout/fragment_home_page.xml
+++ b/app/src/main/res/layout/fragment_home_page.xml
@@ -34,8 +34,8 @@
         android:layout_marginTop="20dp"
         android:layout_below="@+id/search_bar_layout"
         android:layout_width="wrap_content"
-        android:layout_height="200dp"
-        android:src="@drawable/steve_jobs"
+        android:layout_height="150dp"
+        android:src="@drawable/ad_homepage"
         android:layout_gravity="center"/>
 
     <ListView
